[tool.poetry]
name = "zvonokin"
version = "0.1.0"
description = ""
authors = ["care1e55"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic-settings = "^2.2.1"
typer = "0.12.3"
pydub = "0.25.1"
deepspeech = "0.9.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
mypy = "^1.0.0"
black = "24.4.2"
